Settings: Don't pass JPEG images to WebUI as image/png

ProfileInfoHandler::GetAccountNameAndIcon expects
chromeos::UserImageSource::GetUserImage to return a PNG
image so webui::GetPngDataUrl can be used to create a
profile icon data url from it that can be used by WebUI.

This change makes UserImageSource::GetUserImage always
return a PNG image so that the assumptions made in
GetAccountNameAndIcon are correct.

JPEG images with image/png mime type happen to work
previously as Blink will ignore the mime type and look
at the image signature to determine how to decode it.
The code that was introduced to remove animations from
PNG images is not that smart.

Bug: 779042
Test: manual
Change-Id: Ib33821f9a25d38626aa939b2540b2a77487de4dc
Reviewed-on: https://chromium-review.googlesource.com/744907
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512653}
Former-commit-id: 7248fbb91cb22965fb1427b4e3bc416de7bfabb7